# AI-Data-Architecture

./: README.md  main.py  pyproject.toml
config/: config.yaml
src/: config_loader.py  rag_v1_basic.py  rag_v2_pdf.py  rag_v3_vector_db.py  rag_v4_memory.py  rag_v5_hybrid.py  rag_v6_rerank.py
src/services/: llm_provider.py
