[project]
name = "my-ai-agent-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.13.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
]
